--- a/Javascript_Basics_CSS/js_basics.html
+++ b/Javascript_Basics_CSS/js_basics.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
       <head>
+            <meta charset="utf-8">
             <title>Javascript Basics</title>
             <link rel="stylesheet" type="text/css" href="js_basics.css">
       </head>
@@ -12,20 +13,22 @@
                   <div id="main_block">
                         <div id="nav">
                               <a href="">Home</a>
-                              <ul id="nav menu">
-                                    <li><a href="">Javascript Overview</a></li>
-                                          <ul>
-                                                <li><a href="">Variable Declaration</a></li>
-                                                <li><a href="">Variable Assignment</a></li>
-                                                <li><a href="">Data Type</a></li>
-                                                <li><a href="">Conditionals</a></li>
-                                                <li><a href="">Loops</a></li>
-                                                <li><a href="">Function</a></li>
-                                          </ul>
-                                    <li><a href="">Projects</a></li>
-                                    <li><a href="">Assignments</a></li>
-                                    <li><a href="">Quiz</a></li>
-                              </ul>
+                              <div id="nav_menu">
+                                    <ul>
+                                          <li><a href="">Javascript Overview</a></li>
+                                                <ul>
+                                                      <li><a href="">Variable Declaration</a></li>
+                                                      <li><a href="">Variable Assignment</a></li>
+                                                      <li><a href="">Data Type</a></li>
+                                                      <li><a href="">Conditionals</a></li>
+                                                      <li><a href="">Loops</a></li>
+                                                      <li><a href="">Function</a></li>
+                                                </ul>
+                                          <li><a href="">Projects</a></li>
+                                          <li><a href="">Assignments</a></li>
+                                          <li><a href="">Quiz</a></li>
+                                    </ul>
+                              </div>
                         </div>
                         <div id="main_content">
                               <h2 style="color:white">JavaScript Basics</h2>
@@ -33,27 +36,28 @@
                               <p style="color:white">JavaScript is a cross-platform, object-oriented scripting language. JavaScript is extremely popular for a variety of reasons. It is a small and lightweight language allowing maximum flexibility for developers to take it in a bunch of different directions. JavaScript lives inside a host environment (a web browser or Node Server), it can be connected to the objects of these environments to provide programmatic control over them.</p>
                               <br>
                               <ul>
-                                    <li><a href="">Variable Declaration</a> JavaScript variables are containers for storing data values - imagine a cup you fill with coffee, the cup holds the coffee, a variable holds a value. All JavaScript variables must be identified with unique names. These unique names are called identifiers. <span style="color: rgb(83,80,144)">var x;</span></li>
-                                    <br>
-                                    <p><li><a href="">Variable Assignment</a>
-                                    Assignment operators assign values to JavaScript variables - our cup can now have coffee poured into it, giving our variable a value to hold. The = assignment operator assigns a value to a variable. <span style="color:rgb(83,80,144)">var x = 10;</span></p></li>
-                                    <br>
-                                    <p><li><a href="">Data Types</a>
-                                    Data types are in an important concept; to be able to operate on variables you need to know the data type. There are six data types that are JavaScript promoties: Boolean - <span style="color:rgb(83,80,144)">true</span> or <span style="color:rgb(83,80,144)">false;</span> null -<span style="color:rgb(83,80,144)">null</span> akanothing; Number -<span style="color:rgb(83,80,144)">42</span> or <span style="color:rgb(83,80,144)">3.14159;</span> String - <span style="color:rgb(83,80,144)">"Coding Dojo Rocks!";</span> Array - <span style="color:rgb(83,80,144)">[1, 'Coding', 2, 'Dojo'];</span> and Object - <span style="color:rgb(83,80,144)">{first_name: 'Jane', last_name: 'Doe'}</span></p></li>
-                                    <br>
-                                    <p><li><a href="">Conditionals</a>
-                                    When you write code, you want to perform different actions for different decisions - hitting different code blocks based on values or conditions that have been met. You can use conditional statements in your code to accomplish this. There are the following conditional statements: <span style="color:rgb(83,80,144)">if</span> a specified condition is true, do this code in our code block; <span style="color:rgb(83,80,144)">else if</span> to specify a new condition to test, if the first condition is false; <span style="color:rgb(83,80,144)">else</span> we execute this block of code;</p></li>
-                                    <br>
-                                    <p><li><a href="">Loops</a>
-                                    There are many different kinds of loops in every programming language, but they all essentially do the same thing: they will repeat an action some number of times. Imagine you have to run a mile, well you run around the track four times and then you stop. That's a loop!</p></li>
-                                    <br>
-                                    <p><li><a href="">Function</a>
-                                    Functions are an encapsulation of a code block. When we call our function this will run that code block. Think of it as a list of instructions. As an example imagine we are putting together a desk from Ikea, we open up the instruction manual and get started, first we screw the legs to the table top; next we place the table the right way up. Done! We finished our instructions. Sadly there are a ton more tables to do so lets call our function over and over and over again.</p></li>
+                                    <li><a href="">Variable Declaration</a> JavaScript variables are containers for storing data values - imagine a cup you fill with coffee, the cup holds the coffee, a variable holds a value. All JavaScript variables must be identified with unique names. These unique names are called identifiers. <span style="color: rgb(83,80,144)">var x;</span>
+                                    </li>
+                                    <li><a href="">Variable Assignment</a>
+                                          Assignment operators assign values to JavaScript variables - our cup can now have coffee poured into it, giving our variable a value to hold. The = assignment operator assigns a value to a variable. <span style="color:rgb(83,80,144)">var x = 10;</span>
+                                    </li>
+                                    <li><a href="">Data Types</a>
+                                          Data types are in an important concept; to be able to operate on variables you need to know the data type. There are six data types that are JavaScript promoties: Boolean - <span style="color:rgb(83,80,144)">true</span> or <span style="color:rgb(83,80,144)">false;</span> null -<span style="color:rgb(83,80,144)">null</span> akanothing; Number -<span style="color:rgb(83,80,144)">42</span> or <span style="color:rgb(83,80,144)">3.14159;</span> String - <span style="color:rgb(83,80,144)">"Coding Dojo Rocks!";</span> Array - <span style="color:rgb(83,80,144)">[1, 'Coding', 2, 'Dojo'];</span> and Object - <span style="color:rgb(83,80,144)">{first_name: 'Jane', last_name: 'Doe'}</span>
+                                    </li>
+                                    <li><a href="">Conditionals</a>
+                                                When you write code, you want to perform different actions for different decisions - hitting different code blocks based on values or conditions that have been met. You can use conditional statements in your code to accomplish this. There are the following conditional statements: <span style="color:rgb(83,80,144)">if</span> a specified condition is true, do this code in our code block; <span style="color:rgb(83,80,144)">else if</span> to specify a new condition to test, if the first condition is false; <span style="color:rgb(83,80,144)">else</span> we execute this block of code;
+                                    </li>
+                                    <li><a href="">Loops</a>
+                                                There are many different kinds of loops in every programming language, but they all essentially do the same thing: they will repeat an action some number of times. Imagine you have to run a mile, well you run around the track four times and then you stop. That's a loop!
+                                    </li>
+                                    <li><a href="">Function</a>
+                                                Functions are an encapsulation of a code block. When we call our function this will run that code block. Think of it as a list of instructions. As an example imagine we are putting together a desk from Ikea, we open up the instruction manual and get started, first we screw the legs to the table top; next we place the table the right way up. Done! We finished our instructions. Sadly there are a ton more tables to do so lets call our function over and over and over again.
+                                    </li>
                               </ul>
                         </div>
                   </div><!-- end of main block -->
                   <div id="footer">
-                        <p style="color:white">For more useful information check out this url: <a href>JavaScript!</p></a>
+                        <p style="color:white">For more useful information check out this url: <a href="">JavaScript!</a></p>
                   </div>
             </div><!-- end of wrapper -->
       </body>
