Added Time JS and While You Wait JS

--- a/Time-Javascript/time.html
+++ b/Time-Javascript/time.html
@@ -3,6 +3,6 @@
       <head>
             <meta charset="utf-8">
             <title>I Do Declare!</title>
-            <script type="text/javascript" src="time.js"></script>
+            <script type="text/javascript" src="time2.js"></script>
       </head>
 </HTML>
