Changed .data text to be green

--- a/jQuery-Functions.html
+++ b/jQuery-Functions.html
@@ -60,7 +60,7 @@
                   }
 
                   span{
-                        color:red;
+                        color: green;
                         font-style: italic;
                   }
 
